<resources>
    <string name="add">Add</string>
    <string name="add_alert">What do you want to add?</string>
    <string name="add_permissions">Add Permissions</string>
    <string name="add_roles">Add Role</string>
    <string name="add_rooms">Add Room</string>
    <string name="add_users">Add User</string>
    <string name="app_name">MSA Dentistry Clinic</string>
    <string name="cancel">Cancel</string>
    <string name="capacity">Capacity</string>
    <string name="capacity_number">1</string>
    <string name="change_language">Change your language:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_admin">Contact the Admin</string>
    <string name="department">Department</string>
    <string name="edit">Edit</string>
    <string name="email">E-mail</string>
    <string name="employees">Employees</string>
    <string name="empty">Empty</string>
    <string name="fail">Failed</string>
    <string name="floor">Floor</string>
    <string name="floor_number">1</string>
    <string name="forget">Forget Your Password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="id">ID</string>
    <string name="line">Line</string>
    <string name="link_hint">e.g. AddUsersFragment</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="logout">Logout</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="password">Password</string>
    <string name="password_hint">e.g. U12P123QRS87</string>
    <string name="permission">Users Permissions</string>
    <string name="permission_hint">e.g. Add Users</string>
    <string name="permission_link">Permission Link</string>
    <string name="permission_links">Permissions</string>
    <string name="permission_name">Permission Name</string>
    <string name="remove">Remove</string>
    <string name="requests">Requests</string>
    <string name="required">Required Field</string>
    <string name="role">Roles</string>
    <string name="role_hint">e.g. Admin</string>
    <string name="role_name">Role Name</string>
    <string name="rooms">Rooms</string>
    <string name="room_hint">e.g. H113</string>
    <string name="room_name">Room Name</string>
    <string name="search">Search</string>
    <string name="search_alert">What do you want to search?</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="welcome">Welcome back!</string>
</resources>
