<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/edit"
            android:title="@string/edit" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/request"
            android:title="@string/requests" />
    </group>

    <item android:title="Account">

        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />

        </menu>

    </item>

</menu>
