<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddRoomFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/logo"
        android:src="@drawable/tooth"
        android:tint="#47202052" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableEnd="@drawable/line"
            android:drawablePadding="6dp"
            android:fontFamily="@font/alike_regular"
            android:text="@string/add_rooms"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:paddingEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/room_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/roomNameEdit"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="2"
                    android:background="@drawable/spinner_bg"
                    android:hint="@string/room_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textSize="12sp"
                    tools:targetApi="o" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/department"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@drawable/spinner_bg">

                    <Spinner
                        android:id="@+id/departmentSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/floor"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/removeFloorButton"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/remove"
                    android:src="@drawable/remove"
                    android:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/floorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/floor_number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/addFloorButton"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/add"
                    android:src="@drawable/add"
                    android:tint="@color/colorPrimaryDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/capacity"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/removeCapacityButton"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/remove"
                    android:src="@drawable/remove"
                    android:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/capacityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/capacity_number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/addCapacityButton"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/add"
                    android:src="@drawable/add"
                    android:tint="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addRoom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_rooms"
            android:textColor="@color/white" />

    </RelativeLayout>

</FrameLayout>