<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddPermissionsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/logo"
        android:src="@drawable/tooth"
        android:tint="#47202052" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/alike_regular"
            android:text="@string/add_permissions"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp"
            android:textStyle="bold"
            android:drawableEnd="@drawable/line2"
            android:drawablePadding="6dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:paddingEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/permission_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/permissionNameEdit"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="2"
                    android:inputType="text"
                    android:background="@drawable/spinner_bg"
                    android:hint="@string/permission_hint"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:importantForAutofill="no"
                    tools:targetApi="o"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/permission_link"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/permissionLinkEdit"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="2"
                    android:inputType="text"
                    android:background="@drawable/spinner_bg"
                    android:hint="@string/link_hint"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:importantForAutofill="no"
                    tools:targetApi="o"/>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addPermission"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_permissions"
            android:textColor="@color/white" />

    </RelativeLayout>

</FrameLayout>