<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:elevation="10dp" >

    <LinearLayout
        android:id="@+id/topLinear"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:src="@drawable/msa_logo"
            android:layout_marginStart="8dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:src="@drawable/cs_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerInParent="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/alike_regular"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"/>

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            android:fontFamily="@font/alike_regular"
            android:textColorHint="@color/lightPurple"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="6dp"/>

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:fontFamily="@font/alike_regular"
            android:textColorHint="@color/lightPurple"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="6dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Login"
            android:background="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/alike_regular"
            android:onClick="login"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget"
                android:textColor="@color/white"
                android:fontFamily="@font/alike_regular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_admin"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/alike_regular"
                android:clickable="true"
                android:onClick="notifyAdmin"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>