<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddUsersFragment"
    android:background="#00FFFFFF">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@drawable/tooth"
        android:tint="#47202052"
        android:layout_gravity="bottom|end"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/headerLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alike_regular"
                android:text="@string/add_users"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginRight="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:layout_below="@id/headerLinear">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/employees"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/spinner_bg">

                    <Spinner
                        android:id="@+id/employeesSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:layout_gravity="center"
                        android:textSize="12sp"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/spinner_bg">

                    <Spinner
                        android:id="@+id/rolesSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:layout_gravity="center"
                        android:textSize="12sp"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/userPasswordEdit"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="28dp"
                    android:hint="e.g. U12P123QRS87"
                    android:inputType="textPassword"
                    android:background="@drawable/spinner_bg"
                    android:textSize="12sp"
                    android:paddingLeft="8dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/userConfirmPasswordEdit"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="28dp"
                    android:hint="e.g. U12P123QRS87"
                    android:inputType="textPassword"
                    android:background="@drawable/spinner_bg"
                    android:textSize="12sp"
                    android:paddingLeft="8dp"/>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addUser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="@string/add_users"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </RelativeLayout>

</FrameLayout>